syntax = "proto3";
option go_package = "FusionBridge/metadata/file";

import "google/protobuf/timestamp.proto";

package file;

message FsEvent {
    int32 SubmissionNumber = 1;
    google.protobuf.Timestamp TimeStamp = 2;
    int32 Op = 3;
    string Location = 4;
    uint32 Permissions = 5;
    string Owner = 6;
    string Group = 7;

    bytes Content = 16; // Only used for file writes
    string DevID = 17;
}

message FsEventACK {
    int32 SubmissionNumber = 1;
    int32 Type = 2;
}

service File {
    rpc SaveFsEvent(FsEvent) returns (FsEventACK) {}
}

